@@ -70,7 +70,7 @@ struct libluksde_internal_volume
 	 */
 	uint8_t file_io_handle_opened_in_library;
 
-#if defined( HAVE_MULTI_THREAD_SUPPORT )
+#if defined( HAVE_LIBLUKSDE_MULTI_THREAD_SUPPORT )
 	/* The read/write lock
 	 */
 	libcthreads_read_write_lock_t *read_write_lock;
